--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <input type="email" class="input js-input js-input-email" name="email" placeholder="Email"  >
             </div>
             <div class="form__group">
-                <input type="password" class="input js-input js-input-password" name="password" placeholder="Password"  >
+                <input type="password`" class="input js-input js-input-password" name="password" placeholder="Password"  >
             </div>
             <div class="form__group">
                 <input type="radio" id="male" name="gender"/>
@@ -36,11 +36,12 @@
             <button class="btn" type="submit">
                 Submit form
             </button>
+            <br/>
+            <button type="button" class="input js-button">Developer info</button>
         </form>
     </div>
     <script src="js.js">
     </script>
-    <!-- <body onload='popBox()'> -->
     </body>
 </body>
 </html>
